--- a/PH_Gemini_1.1
+++ b/PH_Gemini_1.1
@@ -20,7 +20,7 @@
 // ================================================================================================
 #include <Wire.h>                     // Comunicação I2C (para o LCD e ADS1115)
 #include <LiquidCrystal_I2C.h>        // Controle do display LCD
-#include <Adafruit_ADS1015.h>         // Controle do conversor Analógico-Digital de precisão
+#include <Adafruit_ADS1X15.h>         // Controle do conversor Analógico-Digital de precisão
 #include <OneWire.h>                  // Protocolo de comunicação para o sensor de temperatura
 #include <DallasTemperature.h>        // Controle do sensor de temperatura DS18B20
 #include <EEPROM.h>                   // Memória não-volátil para salvar configurações
